Gutenberg: Attempt to fix overflow issue in IE11
See #3746.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@7595 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/gutenberg/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/gutenberg/style.css
@@ -949,6 +949,7 @@ object {
 
 	.gutenberg__editor .edit-post-layout .edit-post-layout__content {
 		margin-top: 32px;
+		overflow-y: inherit;
 	}
 
 	.gutenberg__editor .edit-post-last-revision__panel {
